# wheeldb

./: .gitignore  CLAUDE.md  FORMAT.md  HANDOFF.md  README.md  WheelofFortune6.4.pptm  pyproject.toml  wheeldb.py
.claude/: settings.json
.claude/hooks/: test_first_guard.py
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
raw_pages/compendium41_files/: widgets_1144.css
specs/001-episode-puzzle-parser/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-sqlite-database-creation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-csv-output-format/: 005-spec-draft.txt  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-pptm-puzzle-injection/: 006-spec-draft.txt  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/wheeldb/: __init__.py  __main__.py  cli.py  csv_storage.py  episodes.py  errors.py  fetch.py  gamegen.py  ingest.py  models.py  normalize.py  parser.py  pptx_inject.py  storage.py
tests/: conftest.py  csv_helpers.py  print_helpers.py  test_cli.py  test_db.py  test_fetch.py  test_parser.py
tests/fixtures/: compendium1.html  compendium20.html  compendium42.html  compendium_badround.html  compendium_dupround.html  compendium_notable.html  index.html  season42.html
vba/: apply_fastsound.ps1  apply_playsound.ps1  mod_FastSound.bas  mod_FastSound_playsound.bas
(+33 files in other folders)
